--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "handlebars": "^4.7.7",
     "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
@@ -36,6 +37,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/lodash": "^4.14.190",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.11.9",
     "nodemon": "^2.0.20",
